--- a/index.html
+++ b/index.html
@@ -1,1 +1,13 @@
-Mobbing Stop!
+ <!DOCTYPE html>
+<html>
+<head>
+<title>Mobbing stop!</title>
+</head>
+<body>
+
+<h1>Magda Dziewguć - Google Cloud Country Manager - Poland</h1>
+<a href="magda-dziewguc-google-country-manager-poland_mDi4URdA.mp4">
+         <img alt="Qries" src="screenshot2.png">
+      </a>
+</body>
+</html> 
