--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
 <body>
 
 <h1>Magda Dziewguć - Google Cloud Country Manager - Poland</h1>
-<a href="magda-dziewguc-google-country-manager-poland_mDi4URdA.mp4">
-         <img alt="Qries" src="screenshot2.png">
+<a href="./magda-dziewguc-google-country-manager-poland_mDi4URdA.mp4">
+         <img alt="Magda Dzieguc-Interview " src="./screenshot2.png">
       </a>
 </body>
 </html> 
