--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
 </head>
 <body>
 
-<h1>Magda Dziewguć - Google Cloud Country Manager - Poland</h1>
+<h1>Magda Dziewguc - Google Cloud Country Manager - Poland</h1>
 <a href="./magda-dziewguc-google-country-manager-poland_mDi4URdA.mp4">
-         <img alt="Magda Dzieguc-Interview " src="./screenshot2.png">
+         <img alt="Magda Dziewguc-Interview " src="./screenshot2.png">
       </a>
 </body>
 </html> 
