--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 
 <h1>Magda Dziewguc - Google Cloud Country Manager - Poland</h1>
 <a href="./magda-dziewguc-google-country-manager-poland_mDi4URdA.mp4">
-         <img alt="Magda Dziewguc-Interview " src="./screenshot2.png">
+         <img alt="Magda Dziewguc-Interview " src="./Screenshot2.png">
       </a>
 </body>
 </html> 
