--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <title>Mobbing stop!</title>
 </head>
 <body>
-
+<img alt="Mobbing Stop!" src="./mobbingstop.png">
 <h1>Magda Dziewguc - Google Cloud Country Manager - Poland</h1>
 <a href="./magda-dziewguc-google-country-manager-poland_mDi4URdA.mp4">
          <img alt="Magda Dziewguc-Interview " src="./Screenshot2.png">
