--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 </head>
 <body>
 <img alt="Mobbing Stop!" src="./mobbingstop.png">
-<h1>Magda Dziewguc - Google Cloud Country Manager - Poland</h1>
+<h2>This is how Magda Dziewguc speaks to people in her team </h2>
 <a href="./magda-dziewguc-google-country-manager-poland_mDi4URdA.mp4">
          <img alt="Magda Dziewguc-Interview " src="./Screenshot2.png">
       </a>
