--- a/index.html
+++ b/index.html
@@ -5,9 +5,11 @@
 </head>
 <body>
 <img alt="Mobbing Stop!" src="./mobbingstop.png" width=10" height="10">
-<h2>This is how Magda Dziewguc speaks to people in her team </h2>
+<h2>Magda Dziewguc speaks to people in her team </h2>
 <a href="./magda-dziewguc-google-country-manager-poland_mDi4URdA.mp4">
          <img alt="Magda Dziewguc-Interview " src="./Screenshot2.png">
       </a>
+                                                                     
+<img alt="LinkedIn" src="./linkedin.png">                                                                   
 </body>
 </html> 
