--- a/index.html
+++ b/index.html
@@ -4,12 +4,11 @@
 <title>Mobbing stop!</title>
 </head>
 <body>
-<img alt="Mobbing Stop!" src="./mobbingstop.png" width=10" height="10">
-<h2>Magda Dziewguc speaks to people in her team </h2>
+<img alt="Mobbing Stop!" src="./mobbingstop.png" width=50" height="50">
+<h2>Magda Dziewguc addressing people in her team </h2>
 <a href="./magda-dziewguc-google-country-manager-poland_mDi4URdA.mp4">
          <img alt="Magda Dziewguc-Interview " src="./Screenshot2.png">
-      </a>
-                                                                     
+      </a>                                                                   
 <img alt="LinkedIn" src="./linkedin.png">                                                                   
 </body>
 </html> 
