--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 </head>
 <body>
 <img alt="Mobbing Stop!" src="./mobbingstop.png" width=50" height="50">
-<h2>Magda Dziewguc addressing people in her team </h2><br>
+<h2>Magda Dziewguc "respecting" people in her team </h2><br>
 <a href="./magda-dziewguc-google-country-manager-poland_mDi4URdA.mp4">Click to listen</a>
 <a href="./magda-dziewguc-google-country-manager-poland_mDi4URdA.mp4">
          <img alt="Magda Dziewguc-Interview " src="./Screenshot2.png">
