--- a/index.html
+++ b/index.html
@@ -4,12 +4,14 @@
 <title>Mobbing stop!</title>
 </head>
 <body>
+ <center>
 <img alt="Mobbing Stop!" src="./mobbingstop.png" width=50" height="50">
 <h2>Magda Dziewguc "respecting" people in her team </h2><br>
 <a href="./magda-dziewguc-google-country-manager-poland_mDi4URdA.mp4">Click to listen</a>
 <a href="./magda-dziewguc-google-country-manager-poland_mDi4URdA.mp4">
          <img alt="Magda Dziewguc-Interview " src="./Screenshot2.png">
       </a><br>                                                                  
-<img alt="LinkedIn" src="./linkedin.png">                                                                   
+<img alt="LinkedIn" src="./linkedin.png">    
+  </center>
 </body>
 </html> 
