--- a/index.html
+++ b/index.html
@@ -6,12 +6,11 @@
 <body>
  <center>
 <img alt="Mobbing Stop!" src="./mobbingstop.png" width=50" height="50">
-<h2>Magda Dziewguc "respecting" people in her team </h2><br>
-<a href="./magda-dziewguc-google-country-manager-poland_mDi4URdA.mp4">Click to listen</a>
-<a href="./magda-dziewguc-google-country-manager-poland_mDi4URdA.mp4">
-         <img alt="Magda Dziewguc-Interview " src="./Screenshot2.png">
-      </a><br><br>                                                                  
-<img alt="LinkedIn" src="./linkedin.png">    
+<h2>Magda Dziewguc "respecting" people in her team </h2>
+<p><a href="./magda-dziewguc-google-country-manager-poland_mDi4URdA.mp4">Click to listen</a></p>
+<p><a href="./magda-dziewguc-google-country-manager-poland_mDi4URdA.mp4">
+         <img alt="Magda Dziewguc-Interview " src="./Screenshot2.png"></a></p>
+<p><img alt="LinkedIn" src="./linkedin.png"></p>
   </center>
 </body>
 </html> 
