--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 <body>
  <center>
 <img alt="Mobbing Stop!" src="./mobbingstop.png" width=50" height="50">
-<h2>Magda Dziewguc - Google Cloud Country Manager-Poland, "respecting" people in her team </h2>
+<h2>Magda Dziewguc - Google Cloud Country Manager-Poland <br> "respecting" people in her team </h2>
 <p><a href="./magda-dziewguc-google-country-manager-poland_mDi4URdA.mp4">Click to listen</a></p>
 <p><a href="./magda-dziewguc-google-country-manager-poland_mDi4URdA.mp4">
          <img alt="Magda Dziewguc-Interview " src="./Screenshot2.png"></a></p>
