--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <p><a href="./magda-dziewguc-google-country-manager-poland_mDi4URdA.mp4">Click to listen</a></p>
 <p><a href="./magda-dziewguc-google-country-manager-poland_mDi4URdA.mp4">
          <img alt="Magda Dziewguc-Interview " src="./Screenshot2.png"></a></p>
-<p>The whole interview is publicly uvailable on  linkedin</p>
+<p>The whole interview is publicly uvailable on  linkedin:</p>
 <p><a href="https://www.linkedin.com/feed/update/urn:li:activity:6864504266044837888/">
          <img alt="LinkedIn" src="./linkedin.png"></a></p>
   </center>
