--- a/index.html
+++ b/index.html
@@ -1,12 +1,12 @@
  <!DOCTYPE html>
 <html>
 <head>
-<title>Mobbing stop!</title>
+<title>Magda Dziewguc-Mobbing stop!</title>
 </head>
 <body>
  <center>
 <img alt="Mobbing Stop!" src="./mobbingstop.png" width=50" height="50">
-<h2>Magda Dziewguc to her people:</h2>
+<h2>Google Cloud Country Manager Poland speaking to her people:</h2>
 <p><a href="./magda-dziewguc-google-country-manager-poland_mDi4URdA.mp4">Click to listen</a></p>
 <p><a href="./magda-dziewguc-google-country-manager-poland_mDi4URdA.mp4">
          <img alt="Magda Dziewguc-Interview " src="./Screenshot2.png"></a></p>
