--- a/index.html
+++ b/index.html
@@ -18,5 +18,9 @@
 <script type="text/javascript">(function(){var hstc=document.createElement('script'); hstc.src='https://log.hitsteps.net/track.php?code=920452fabdacf269d654429b998594cf';hstc.async=true;var htssc = document.getElementsByTagName('script')[0];htssc.parentNode.insertBefore(hstc, htssc);})();
 </script><noscript><a href="http://www.hitsteps.com/"><img src="//log.hitsteps.net/track.php?mode=img&amp;code=920452fabdacf269d654429b998594cf" alt="web stats" width="1" height="1" />web statistics</a></noscript>
 <!-- Hitsteps TRACKING CODE - DO NOT CHANGE -->
+<!-- Hitsteps TRACKING CODE - Manual 2022-03-16 - DO NOT CHANGE -->
+<script type="text/javascript">(function(){var hstc=document.createElement('script'); hstc.src='https://log.hitsteps.net/track.php?code=41afb521b949b56850a93fa3c59bfd36';hstc.async=true;var htssc = document.getElementsByTagName('script')[0];htssc.parentNode.insertBefore(hstc, htssc);})();
+</script><noscript><a href="http://www.hitsteps.com/"><img src="//log.hitsteps.net/track.php?mode=img&amp;code=41afb521b949b56850a93fa3c59bfd36" alt="free website tracking" width="1" height="1" />web stats</a></noscript>
+<!-- Hitsteps TRACKING CODE - DO NOT CHANGE -->
 </body>
 </html
