--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
  <!DOCTYPE html>
 <html>
 <head>
-<title>Magda Dziewguc-Mobbing stop!</title>
+<title>Magda Dziewguc, Google Poland - Mobbing stop!</title>
 </head>
 <body>
  <center>
