--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 <body>
  <center>
 <!-- <img alt="Mobbing Stop!" src="./mobbingstop.png" width=50" height="50"> -->
-<h2><font face="Arial" size="20px" color="#FF7A59">This is reality of Google in Poland:</font></h2>
+<h2><font face="Arial" size="20px" color="#FF7A59">This is reality of Google Poland:</font></h2>
 <p><a href="./magda-dziewguc-google-country-manager-poland_mDi4URdA.mp4">Click to listen</a></p>
 <p><a href="./magda-dziewguc-google-country-manager-poland_mDi4URdA.mp4">
          <img alt="Magda Dziewguc-Interview " src="./Screenshot2.png"></a></p>
